Reset Password Added

--- a/src/app/component/resetpassword.component.html
+++ b/src/app/component/resetpassword.component.html
@@ -1,40 +1,9 @@
-<div class="limiter">
-  <div class="container-login100" style="background-image: url('images/bg-01.jpg');">
-    <div class="wrap-login100 p-l-55 p-r-55 p-t-65 p-b-54">
-      <form class="login100-form validate-form">
-        <span class="login100-form-title p-b-49">
-          Reset Password
-        </span>
-
-        <div class="wrap-input100 validate-input m-b-23" data-validate = "Password is reauired">
-          <span class="label-input100">Password</span>
-          <input class="input100" type="password" name="password" placeholder="Type your Password">
-          <span class="focus-input100" data-symbol="&#xf190;"></span>
-        </div>
-
-        <div class="wrap-input100 validate-input" data-validate="Confirm Password is required">
-          <span class="label-input100">Confirm Password</span>
-          <input class="input100" type="password" name="confirm_password" placeholder="Re-Type your password">
-          <span class="focus-input100" data-symbol="&#xf190;"></span>
-        </div>
-
-        <div class="text-right p-t-8 p-b-31">
-
-        </div>
-
-        <div class="container-login100-form-btn">
-          <div class="wrap-login100-form-btn">
-            <div class="login100-form-bgbtn"></div>
-            <button class="btn btn-success">
-              Submit
-            </button>
-          </div>
-        </div>
-
-      </form>
-    </div>
+<div class="login-page">
+  <div class="form">
+    <form class="login-form">
+      <input type="password" placeholder="Password" name='password' [(ngModel)] = 'password'/>
+      <input type="password" placeholder="Re-Type Password" name='confirmpassword' [(ngModel)] = 'confirmpassword'/>
+      <button (click) = 'validateandsetpassword()'>Submit</button>
+    </form>
   </div>
 </div>
-
-
-<div id="dropDownSelect1"></div>
