--- a/src/app/component/resetpassword.component.html
+++ b/src/app/component/resetpassword.component.html
@@ -1,6 +1,7 @@
 <div class="login-page">
   <div class="form">
     <form class="login-form">
+      <h3 class="text-center pv ng-binding">Reset Password</h3><br>
       <input type="password" placeholder="Password" name='password' [(ngModel)] = 'password'/>
       <input type="password" placeholder="Re-Type Password" name='confirmpassword' [(ngModel)] = 'confirmpassword'/>
       <button (click) = 'validateandsetpassword()'>Submit</button>
